// Copyright 2009 Google Inc. All Rights Reserved.
// Author: morgwai@google.com (Morgwai Kotarbinski)
//
// Basic messages used by all systems (extension, feedbackserver,
// silver-bullet clustering, android etc).

syntax = "proto2";

package userfeedback;

// Data present in all kinds of feedbacks, regardless of source (Web, Android,
// other).
message CommonData {
  optional fixed64 gaia_id = 1;

  // Description of the problem entered by user.
  optional string description = 2;
  optional string description_translated = 4;
  optional string source_descripton_language = 5 [ default = "en" ];

  optional string user_email = 3;
};
